I was finished with dashboard the logic working well and responsive design look great ;)

--- a/styles/stats.css
+++ b/styles/stats.css
@@ -1,3 +1,8 @@
+.tiles-grid {
+    @apply grid grid-cols-1 sm:grid-cols-3 gap-4;
+}
+
+
 .tile {
     @apply bg-white shadow-md p-2 text-blue-900 text-center;
 }
