--- a/styles/globals.css
+++ b/styles/globals.css
@@ -54,7 +54,7 @@ table.basic a{
 }
 
 .btn-red{
-  @apply bg-red-200 text-red-600 px-4 py-1 rounded-sm shadow-sm
+  @apply bg-red-500 text-white px-4 py-1 rounded-sm shadow-sm
 
 }
 
